--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "eosnation",
   "version": "0.1.0",
-  "description": "This is Chunky",
+  "description": "The Carmel EOSNation Product",
   "scripts": {
     "test": "react-savor test",
     "lint": "react-savor lint",
     "coverage": "react-savor coverage",
     "codeclimate": "react-savor codeclimate",
-    "deployweb": "aws s3 sync web/build s3://www.chunky.io"
+    "deploy:web": "aws s3 sync .chunky/web s3://eosnation.carmel.io --profile carmel",
+    "package:web": "chunky package web",
+    "push:web": "npm run package:web && npm run deploy:web",
+    "push": "npm run push:web",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-chunky/react-chunky-product.git"
+    "url": "git+https://github.com/fluidtrends/eosnation.git"
   },
-  "homepage": "http://www.chunky.io",
+  "homepage": "http://eosnation.carmel.io",
   "dependencies": {
     "react-dom-chunky": "0.9.x",
     "font-awesome": "^4.7.0",
