--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   },
   "homepage": "http://eosnation.carmel.io",
   "dependencies": {
-    "react-dom-chunky": "0.9.x",
     "font-awesome": "^4.7.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-dom-chunky": "0.9.x",
     "react-spring": "^5.5.1",
     "react-truncate": "^2.4.0",
+    "react-twitter-embed": "^2.0.4",
     "react-vivus": "0.0.2",
     "styled-components": "^4.0.3",
+    "twitter": "^1.7.1",
     "vivus": "^0.4.4"
   },
   "devDependencies": {
