--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "http://eosnation.carmel.io",
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "raw-loader": "^0.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-dom-chunky": "0.9.x",
