--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-dom-chunky": "^0.9.145",
+    "react-dom-chunky": "^0.9.x",
     "react-spring": "^5.5.1",
     "react-truncate": "^2.4.0",
     "react-twitter-embed": "^2.0.4",
