--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-dom-chunky": "^0.9.146",
+    "react-reveal": "^1.2.2",
     "react-spring": "^5.5.1",
     "react-truncate": "^2.4.0",
     "react-twitter-embed": "^2.0.4",
