--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "react-savor coverage",
     "codeclimate": "react-savor codeclimate",
     "deploy:web": "aws s3 sync .chunky/web s3://eosnation.carmel.io --profile carmel",
-    "package:web": "chunky package web",
+    "package:web": "chunky package web && cp bp.json .chunky/web/bp.json",
     "push:web": "npm run package:web && npm run deploy:web",
     "push": "npm run push:web",
     "storybook": "start-storybook -p 6006",
@@ -24,7 +24,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-dom-chunky": "^0.9.146",
+    "react-dom-chunky": "*",
     "react-reveal": "^1.2.2",
     "react-spring": "^5.5.1",
     "react-truncate": "^2.4.0",
