--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "raw-loader": "^0.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-dom-chunky": "*",
+    "react-dom-chunky": "^1.0.5",
     "react-reveal": "^1.2.2",
+    "react-slick": "^0.23.2",
     "react-spring": "^5.5.1",
     "react-truncate": "^2.4.0",
     "react-twitter-embed": "^2.0.4",
