--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "coverage": "react-savor coverage",
     "codeclimate": "react-savor codeclimate",
     "deploy:web": "aws s3 sync .chunky/web s3://eosnation.carmel.io --profile carmel",
-    "package:web": "chunky package web && cp bp.json .chunky/web/bp.json",
+    "package:web": "chunky package web",
+    "postpackage:web": "cp bp.json .chunky/web/bp.json && cp bos.json .chunky/web/bos.json",
     "push:web": "npm run package:web && npm run deploy:web",
     "push": "npm run push:web",
     "storybook": "start-storybook -p 6006",
