--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "coverage": "react-savor coverage",
     "codeclimate": "react-savor codeclimate",
     "deploy:web": "aws s3 sync .chunky/web s3://eosnation.carmel.io --profile carmel",
-    "package:web": "chunky package web",
-    "postpackage:web": "cp bp.json .chunky/web/bp.json && cp bos.json .chunky/web/bos.json",
+    "package:web": "chunky package web && ./scripts/bpjson.sh",
     "push:web": "npm run package:web && npm run deploy:web",
     "push": "npm run push:web",
     "storybook": "start-storybook -p 6006",
