--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "lint": "react-savor lint",
     "coverage": "react-savor coverage",
     "codeclimate": "react-savor codeclimate",
-    "deploy:web": "aws s3 sync .chunky/web s3://eosnation.carmel.io --profile carmel",
-    "package:web": "chunky package web && ./scripts/bpjson.sh",
-    "push:web": "npm run package:web && npm run deploy:web",
-    "push": "npm run push:web",
+    "deploy": "npm run build && firebase deploy",
+    "build": "chunky package web && ./scripts/bpjson.sh",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
