--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "vivus": "^0.4.4"
   },
   "devDependencies": {
-    "chunky-cli": "1.0.0-alpha.3",
+    "chunky-cli": "^1.0.18",
     "react-savor": "0.x"
   }
 }
