--- a/firebase.json
+++ b/firebase.json
@@ -14,10 +14,10 @@
     ],
     "headers": [{
       "source": "**/*.@(json)",
-      "headers": [{
-        "key": "Access-Control-Allow-Origin",
-        "value": "*"
-      }]
+      "headers": [{"key": "Access-Control-Allow-Origin","value": "*"}]
+    }, {
+      "source":"/service-worker.js",
+      "headers": [{"key": "Cache-Control", "value": "no-cache"}]
     }]
   }
 }
